[gd_scene load_steps=10 format=2]

[ext_resource path="res://memes/player/PlayerIcon.gd" type="Script" id=1]
[ext_resource path="res://core/ui/assets/icons/profile.png" type="Texture" id=2]
[ext_resource path="res://memes/audio/pop_1.wav" type="AudioStream" id=3]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://core/ui/assets/fonts/Montserrat-Black.ttf"

[sub_resource type="DynamicFont" id=3]
size = 20
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 100
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="Animation" id=5]
resource_name = "IconEntrance"
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.26, 0.33 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 0.7, 0.7 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AudioStreamPlayer:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 0.287175 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AudioStreamPlayer:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.19 ),
"transitions": PoolRealArray( 1 ),
"update": 2,
"values": [ true ]
}

[sub_resource type="Animation" id=6]
resource_name = "IconExit"
tracks/0/type = "value"
tracks/0/path = NodePath("PlayerSprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.058261, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.7, 0.7 ), Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}

[node name="PlayerIcon" type="Node2D"]
position = Vector2( 104.65, 77.2985 )
script = ExtResource( 1 )
animate_entry = true

[node name="PlayerSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1e-05, 1e-05 )
frames = SubResource( 1 )

[node name="PlayerNameLabel" type="Label" parent="."]
anchor_bottom = 1.0
margin_left = -91.0
margin_top = 69.0
margin_right = 89.0
margin_bottom = 109.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 90, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "PLAYER NAME"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointChangeLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -43.0
margin_right = 68.0
margin_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 337.938
rect_pivot_offset = Vector2( 90, 20 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "+5"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
method_call_mode = 1
anims/IconEntrance = SubResource( 5 )
anims/IconExit = SubResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
